--- a/curriculo.html
+++ b/curriculo.html
@@ -19,7 +19,7 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Currículo</h1>
             <p class="apresentacao__conteudo__texto">
-                Meu nome é Gabriele Confortini Batista, tenho 21 anos sou Brasileira natural de Taquaritinga/SP.
+                Meu nome é Gabriele Confortini Batista
             </p>
             <div vw class="enabled">
                 <div vw-access-button class="active"></div>
@@ -37,14 +37,8 @@
                     avatar: 'random',
                 });
               </script>
-            <h2 class="apresentacao__conteudo__titulo">Experiências</h2>
-            <ul class="apresentacao__conteudo__texto">
-                <li> Jú Moda Praia | Itanhaém/SP (2017 - 2018) - Atendente na área de vendas, acessórios de praia em geral. </li><br>
-                <li> Toy By Toys | Taquaritinga/SP (dezembro 2021/23/24) - Atendente na área de vendas de brinquedos. </li><br>
-                <li> Gelateria Borelli | Taquaritinga/SP (janeiro-agosto 2022) - Atendente na área de vendas: gelatos e cafés.</li>
-            </ul>
             </p>
-            <h2 class="apresentacao__conteudo__titulo">Estudos</h2>
+            <h2 class="apresentacao__conteudo__titulo">Estudos e Cursos</h2>
             <div class="apresentacao__conteudo__texto">
             <ul class="apresentacao__conteudo__texto">
                 <li> Curso Sistema para Internet - Fatec Taquaritinga (Graduação em andamento/6º Semestre). </li><br>
@@ -58,7 +52,7 @@
     </main> 
 
     <footer class="rodape">
-        <p>Desenvolvido por gabriele confortini.</p>
+        <p>Copyright por gabriele confortini.</p>
     </footer>
 </body>
 </html>
