--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">Olá, seja bem vindo ao meu perfil profissional. <br> Meu nome é Gabriele tenho 21 anos, nasci na cidade de Taquaritinga, interior de SP. Morei em várias cidades, até mesmo no litoral. Atualmente resido no município de Dobrada/SP. <br> Sou estudante de tecnologia na Instituição de Ensino Fatec Taquaritinga, estou cursando Sistema para Internet.
+            <p class="apresentacao__conteudo__texto">Olá, seja bem vindo ao meu perfil profissional. <br> Meu nome é Gabriele, sou estudante de tecnologia na Instituição de Ensino Fatec Taquaritinga, estou cursando Sistema para Internet.
             </p>
             <div vw class="enabled">
                 <div vw-access-button class="active"></div>
@@ -36,15 +36,15 @@
                     avatar: 'random',
                 });
               </script>
-            <p class="apresentacao__conteudo__texto">Meu sonho de carreira era ser Arquiteta Urbanista, mas por meios de comunicação, curiosidade e interresse sobre a tecnologia atual, entrei para esse ramo com o intuito de abranger conhecimentos e aprender como funcionam por trás das telas celular/computador.<br>
-Sou estudante em programação e desenvolvedora em Páginas Web na área de T.I. Sou autodidata e estou disposta para novas oportunidades. <br> Meu plano carreira hoje é ajudar as empresas em seus projetos por meio do desenvolvimento web para maior alcance ao seu público alvo e negócios.
+            <p class="apresentacao__conteudo__texto">Com o crescente interesse pelas tecnologias atuais e o desejo de compreender os processos por trás das telas de celulares e computadores, decidi ingressar na área de Tecnologia da Informação. Sou estudante de Programação e desenvolvedora de Páginas Web, com foco no desenvolvimento de soluções que atendam às necessidades de empresas e seu público-alvo.<br> 
+Além de ser autodidata, estou sempre em busca de novos conhecimentos e oportunidades para expandir minhas habilidades. Meu objetivo é contribuir com as empresas em seus projetos, desenvolvendo sites e plataformas que proporcionem maior alcance e resultados positivos para seus negócios.
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/fotoperfil.jpg" alt="Foto da gabriele confortini">
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido por gabriele confortini.</p>
+        <p>Copyright por gabriele confortini.</p>
     </footer>
 </body>
 </html>
