--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de
                 qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Gabriele Confortini, desenvolvedora Front-end com especialidade em HTML e CSS.
-                Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Gabriele Confortini, desenvolvedora Front-end especializada em HTML e CSS para páginas web. Meu objetivo é ajudar pequenos negócios e designers a transformar boas ideias em soluções práticas e eficazes. Vamos conversar e explorar como posso contribuir para o sucesso do seu projeto?</p>
                 <div vw class="enabled">
                     <div vw-access-button class="active"></div>
                     <div vw-plugin-wrapper>
@@ -56,7 +55,7 @@
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido por gabriele confortini.</p>
+        <p>Copyright por gabriele confortini.</p>
     </footer>
 
 </body>
