--- a/about.html
+++ b/about.html
@@ -36,8 +36,9 @@
                     avatar: 'random',
                 });
               </script>
-            <p class="apresentacao__conteudo__texto">Com o crescente interesse pelas tecnologias atuais e o desejo de compreender os processos por trás das telas de celulares e computadores, decidi ingressar na área de Tecnologia da Informação. Sou estudante de Programação e desenvolvedora de Páginas Web, com foco no desenvolvimento de soluções que atendam às necessidades de empresas e seu público-alvo.<br> 
-            <br>Além de ser autodidata, estou sempre em busca de novos conhecimentos e oportunidades para expandir minhas habilidades. Meu objetivo é contribuir com as empresas em seus projetos, desenvolvendo sites e plataformas que proporcionem maior alcance e resultados positivos para seus negócios.
+            <p class="apresentacao__conteudo__texto">
+        Com o crescente interesse pelas tecnologias atuais e o desejo de compreender os processos por trás das telas de celulares e computadores, decidi ingressar na área de Tecnologia da Informação. Sou estudante de Programação e desenvolvedora de Páginas Web, com foco no desenvolvimento de soluções que atendam às necessidades de empresas e seu público-alvo. Além de ser autodidata, estou sempre em busca de novos conhecimentos e oportunidades para expandir minhas habilidades.<br>
+ Meu objetivo é contribuir com as empresas em seus projetos, desenvolvendo sites e plataformas que proporcionem maior alcance e resultados positivos para seus negócios, estando sempre disposta a mudanças e a atuar em modelos de trabalho presencial, híbrido ou remoto.
             </p>
         </section>
         <img class="apresentacao__imagem" src="./assets/fotoperfil.jpg" alt="Foto da gabriele confortini">
