--- a/curriculo.html
+++ b/curriculo.html
@@ -38,8 +38,8 @@
             <div class="apresentacao__conteudo__texto">
             <ul class="apresentacao__conteudo__texto">
                 <li> Curso Sistema para Internet - Fatec Taquaritinga (Graduação em andamento/6º Semestre). </li><br>
-                <li> Curso Iniciante em Programação <br> Alura Cursos <a href="https://drive.google.com/file/d/123T6a2AgRLX30W9O6vtV7j9XAzCsguzR/view?usp=sharing">com certificado </a></li>
-                <li> Curso eMAG Desenvolvedor <br> Enap <a href="https://drive.google.com/file/d/1T5UYl-WBOiKb2eWoCJBa2QqqEoKEPj3S/view?usp=sharing">com certificado </a></li>
+                <li> Curso Iniciante em Programação <br> Alura Cursos <a href="https://drive.google.com/file/d/123T6a2AgRLX30W9O6vtV7j9XAzCsguzR/view?usp=sharing">com certificado </a></li><br>
+                <li> Curso eMAG Desenvolvedor <br> Enap <a href="https://drive.google.com/file/d/1T5UYl-WBOiKb2eWoCJBa2QqqEoKEPj3S/view?usp=sharing">com certificado </a></li><br>
                 <li> Curso Introdução à Ciência de Dados Santander|Open Academy <a href="https://drive.google.com/file/d/1uXdQ0MvA0Gyd_CsB6Q0v42FVOeCW64mV/view?usp=sharing">com certificado </a></li>
             </ul>
             </div>    
