--- a/curriculo.html
+++ b/curriculo.html
@@ -48,7 +48,7 @@
     </main> 
 
     <footer class="rodape">
-        <p>Copyright por gabriele confortini.</p>
+        <p><span>&copy;</span> Gabriele Confortini. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
