--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer class="rodape">
-        <p>Copyright por gabriele confortini.</p>
+        <p><span>&copy;</span> Gabriele Confortini. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
