--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </main>
 
     <footer class="rodape">
-        <p>Copyright por gabriele confortini.</p>
+        <p> <span>&copy;</span> Gabriele Confortini. Todos os direitos reservados.</p>
     </footer>
 
 </body>
