--- a/curriculo.html
+++ b/curriculo.html
@@ -41,6 +41,7 @@
                 <p> Curso Iniciante em Programação <br> Alura Cursos <a href="https://drive.google.com/file/d/123T6a2AgRLX30W9O6vtV7j9XAzCsguzR/view?usp=sharing">com certificado </a></p><br>
                 <p> Curso eMAG Desenvolvedor <br> Enap <a href="https://drive.google.com/file/d/1T5UYl-WBOiKb2eWoCJBa2QqqEoKEPj3S/view?usp=sharing">com certificado </a></p><br>
                 <p> Curso Introdução à Ciência de Dados Santander|Open Academy <a href="https://drive.google.com/file/d/1uXdQ0MvA0Gyd_CsB6Q0v42FVOeCW64mV/view?usp=sharing">com certificado </a></p>
+                <p> Curso IA generativa|Open Academy <a href="https://drive.google.com/file/d/1XD4Qtm2rAW7xaFQvskvSEL291AsNSyI1/view?usp=sharing">com certificado </a></p>
             </ul>
             </div>    
         </section>
